package com.fei.main.part3.section14.AutoMobile;

/**
 * 汽车
 * @author xurunfei
 * @date 2017/12/1.
 */
public interface AutoMobile {
    void getRook();
}
