package com.fei.main.part3.section14.AutoMobile;

/**
 * 大型汽车
 * @author xurunfei
 * @date 2017/12/1.
 */
public class BigAutoMobile implements AutoMobile {
    @Override
    public void getRook() {
        System.out.println("汽车开始生产......");
    }
}
