package com.fei.main.part3.section14.AutoMobile;

/**
 * 小型汽车
 * @author xurunfei
 * @date 2017/12/1.
 */
public class SmallAutoMobile implements AutoMobile {
    @Override
    public void getRook() {
        System.out.println("小汽车开始生产......");
    }
}
