package com.fei.main.part3.section14.Car;

/**
 * 大客车
 * @author xurunfei
 * @date 2017/12/1.
 */
public interface Car {
    /**
     * 生产
     * @author: xurunfei
     * @date: 2017/12/1 15:59
     */
    void getRook();
}
