package com.fei.main.part3.section14.Car;

/**
 * 小客车
 * @author xurunfei
 * @date 2017/12/1.
 */
public class SmallCar implements Car {
    @Override
    public void getRook() {
        System.out.println("小客车开始生产.....");
    }
}
